<resources>
    <string name="app_name">GreenFlag</string>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - -  Splashscreen - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="main_text_splashscreen">GreenFlag customers can create an account to access</string>
    <string name="car">Car health updates</string>
    <string name="request">Request a rescue online</string>
    <string name="policy">Policy information</string>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - -  Create an account  - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="create_account">Create an account</string>
    <string name="go_back">Return</string>
    <string name="email">Email address</string>
    <string name="example">example@email.com</string>
    <string name="create_password">Create password</string>
    <string name="criteria">See criteria below</string>
    <string name="repeat_password">Repeat password</string>
    <string name="minimal">Your password should be a minimum of 8 characters and contain at least one number, one uppercase and one lowercase letter. You can use special characters.</string>
    <string name="one_invalid">One of the passwords you entered wasn\'t valid</string>
    <string name="match">Your passwords don\'t match</string>
    <string name="correct">You must introduce a correct email</string>
    <string name="already">An account already exists for this email address</string>
    <string name="done">Done</string>
    <string name="account_created">This account has been created successfully!</string>
</resources>