<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AccountActivity">

    <ImageView
        android:id="@+id/iv_back_button"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/symbol_fleche_gauche_vert" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/museum_sans_500"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back_button" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iv_back_button,textView"
        tools:layout_editor_absoluteY="61dp" />

    <ScrollView
        android:id="@+id/sv_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="@font/museum_sans_300"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:autofillHints="emailAddress"
                android:background="@color/white"
                android:hint="@string/example"
                android:inputType="textEmailAddress"
                android:textColorHint="#78909C"
                android:textSize="25sp"
                android:fontFamily="@font/museum_sans_300"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />

            <TextView
                android:id="@+id/tv_wrong_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/text_view_border"
                android:drawableStart="@drawable/cross"
                android:drawablePadding="16dp"
                android:fontFamily="@font/museum_sans_300"
                android:padding="10dp"
                android:text="@string/already"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/et_email"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_password"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="@font/museum_sans_300"
                app:layout_constraintLeft_toLeftOf="@id/et_email"
                app:layout_constraintTop_toBottomOf="@id/tv_wrong_email" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="25sp"
                android:fontFamily="@font/museum_sans_300"
                app:layout_constraintTop_toBottomOf="@id/tv_password"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/repeat_password"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="@font/museum_sans_300"
                app:layout_constraintLeft_toLeftOf="@id/et_email"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="25sp"
                android:fontFamily="@font/museum_sans_300"
                app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_wrong_passwords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/cross"
                android:drawablePadding="16dp"
                android:fontFamily="@font/museum_sans_300"
                android:padding="10dp"
                android:text="@string/one_invalid"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="gone"
                android:background="@drawable/text_view_border"
                app:layout_constraintLeft_toLeftOf="@id/et_email"
                app:layout_constraintTop_toBottomOf="@id/et_confirm_password" />

            <TextView
                android:id="@+id/tv_criteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/minimal"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:fontFamily="@font/museum_sans_300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_wrong_passwords" />

            <Button
                android:id="@+id/btn_create_account"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/gradient_button_background"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp"
                android:fontFamily="@font/museum_sans_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_criteria"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>